# Assembly4_Solver

./: .gitignore  Cargo.toml  MANIFEST.in  setup.py
freecad/asm4_solver/: __init__.py  commands.py  features.py  init_gui.py
freecad/asm4_solver/AddConstraints/: AddConstraintSystem.py  AddLockConstraint.py  SolveSystem.py
freecad/asm4_solver/Commands/: ConstraintSystem.py  LockConstraint.py  SolveSystem.py
freecad/asm4_solver/Resources/ui/: TaskPanel_LockConstraint.ui
src/: constraints.rs  geometry.rs  lib.rs  system.rs  system_object.rs
src/constraints/: constraint_traits.rs  constraint_type.rs  equality_constraint.rs  fix_base_constraint.rs  lock_constraint.rs
src/geometry/: quaternion.rs  vector.rs
